# seven-tasks

./: Cargo.toml  LICENSE  README.md  the-7-tasks.md
cells/: Cargo.toml
circle-drawer/: Cargo.toml
counter/: Cargo.toml
counter/src/: main.rs
counter/ui/: app-window.slint  counter.slint
crud/: Cargo.toml
egui-sv/: Cargo.toml  index.html
egui-sv/assets/: sw.js
egui-sv/src/: app.rs  main.rs
flight-booker/: Cargo.toml
flight-booker/src/: main.rs
floem-sv/: Cargo.toml
floem-sv/src/: main.rs
freya-sv/: Cargo.toml
freya-sv/src/: circle_drawer.rs  crud.rs  flight_booker.rs  main.rs  timer.rs
freya-sv/src/state/: crud.rs  mod.rs
gpui/: Cargo.toml
gpui-sv/: Cargo.toml
iced/: Cargo.toml  counter.rs  flight-booker.rs
iced-sv/: Cargo.toml
makepad-sv/: Cargo.toml
makepad-sv/src/: app.rs  main.rs
notes/: egui.md  floem.md  gpui.md  iced.md
slint/: Cargo.toml
slint-sv/: Cargo.toml
slint-sv/ui/: app-window.slint
slint/ui/: flight-booker.slint
src/: main.rs
state/: Cargo.toml
state/src/: circles.rs  crud.rs  lib.rs
temp-converter/: Cargo.toml
temp-converter/src/: main.rs
timer/: Cargo.toml
timer/src/: main.rs
ui/: app-window.slint  counter.slint  temp-converter.slint
xilem-sv/: Cargo.toml
xilem-sv/src/: main.rs
