[workspace]

resolver = "2"
members = [
   "iced-sv",
   "slint-sv",
   "xilem-sv",
   "freya-sv",
   "makepad-sv",
   "egui-sv",
   "state",
   # "vello-rw",
]

[workspace.dependencies]
time = {version = "0.3.36", features = ["std", "macros", "formatting", "parsing"]}
tokio = "1.46.1"
undo_2 = "0.2.1"
state = {path = "state"}
