[package]
name = "egui-sv"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    # something else in the workspace uses accesskit in a different mode from eframe. I'm disabling it to get past the build conflict
    # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    # "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    # "x11",           # To support older Linux distributions (restores one of the default features)
] }
# You only need serde if you want app persistence:
# serde = { version = "1.0.219", features = ["derive"] }

env_logger = "0.11.8"
log = "0.4.27"

