[package]
name = "freya-sv"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus-router = "0.6.3"
freya = {version = "0.3.4"}
# freya-router = { git = "https://github.com/marc2332/freya.git"}
time = {version = "0.3.36", features = ["std", "macros", "formatting", "parsing"]}
tokio = "1.46.1"
undo_2 = "0.2.1"
